# dd-helloworld

./: .venv  default.nix  devenv.nix  flake.nix  index.html  myapp.py  myapp.sh  pyproject.toml  shell.nix
.github/workflows/: nix-ci.yml  test.yml
